--- a/css.css
+++ b/css.css
@@ -1,3 +1,32 @@
+.navbar {
+	background-color: transparent;
+}
+
+#banner { 
+	background: inherit;
+	height: 370px;
+}
+
+#banner .display-1 {
+	font-weight: 500;
+	text-align: left;
+	color: #314151;
+}
+
+#banner h3 {
+	text-align: left;
+	color: #314151;
+}
+
+body {
+	background-image: url(img/trinagleSkewBG.svg);
+    background-repeat: no-repeat;
+    background-size: 12000px 6928.20323px;
+    background-position: center -2800px;
+    background-color: #e0ebed;
+    z-index: 10;
+}
+
 .redBox {
     background-color: #F67F6A;
     border: 1px solid #F45d08;
@@ -22,35 +51,39 @@
 }
 
 #mb-top, #mb-bottom {
-	max-width: 1285px;
+	max-width: 800px;
 }
 
 #mb-right {
 	position: relative;
 	left: 171px;
-	width: 155px;
+	width: 96px;
 	float: right;
 }
 
 #mb-left {
 	float: left;
-	width: 156px;
+	width: 96px;
 	position: relative;
 	right: 1px;
 }
 
 #mb-container {
-	position: relative;
-	right: 75px;
 	margin-bottom: 25px;
+	width: 800px;
+  margin: 0 auto;
 }
 
 #mb-inner-container {
-	width: 799px;
+	width: 580px;
+	height: 350px;
+	overflow-y: scroll;
 	float: left;
 	position: relative;
-	left: 71px;
+	left: 120px;
+	bottom: 423px;
 	margin-top: 15px;
+	padding-right: 5px;
 }
 
 .widget-img {
@@ -87,30 +120,60 @@
 	border-radius: 0;
 }
 
-#banner {
-	background: url('img/bg.jpg')no-repeat; 
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	height: 560px;
-}
-
-#banner .display-1 {
-	font-weight: 500;
-	text-align: right;
-	color: #fefefe;
-}
-
-#banner h3 {
-	text-align: right;
-	color: #fefefe;
-}
-
 .btn {
 	border-radius: 0;
 }
 
 .m-b-15 {
 	margin-bottom: 15px;
+}
+
+.m-l-50 {
+	margin-left: 50px;
+}
+
+#mb-inner-container::-webkit-scrollbar {
+    width: 5px;
+}
+ 
+#mb-inner-container::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+}
+ 
+#mb-inner-container::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(0,0,0,0.5); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
+}
+#mb-inner-container::-webkit-scrollbar-thumb:window-inactive {
+	background: #000; 
+}
+
+#icon-rows {
+  position: relative;
+  bottom: 280px;
+  text-align: center;
+}
+
+.icon {
+  color: white;
+  font-size: 45px;
+  text-align: center;
+}
+
+#icon-rows p {
+  color: white;
+}
+
+.btn-outline-secondary:hover {
+  background-color: #3c4f63;
+  border-color: #fff;
+}
+
+.btn-outline-secondary {
+  color: #fff;
+  text-transform: uppercase;
 }
