--- a/src/css/css.css
+++ b/src/css/css.css
@@ -43,7 +43,7 @@
 }
 
 body {
-	background-image: url(../img/trinagleSkewBG.svg);
+	background-image: url(../img/trinagleskewBG.svg);
   background-repeat: no-repeat;
   background-size: 12000px 6928.20323px;
   background-position: center -2800px;
