--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,24 +1,38 @@
+body {
+  font-size: 16px;
+}
+
 @font-face {
   font-family: 'Graphik-Medium';
-  src: url("../fonts/graphik/Graphik-Medium.otf"); }
+  src: url("../fonts/graphik/Graphik-Medium.otf");
+}
 
 @font-face {
   font-family: 'Graphik-Regular';
-  src: url("../fonts/graphik/Graphik-Regular.otf"); }
+  src: url("../fonts/graphik/Graphik-Regular.otf");
+}
 
-.navbar {
-	background-color: transparent;
+.h1 {
+  font-size: 2.6rem !important;
+}
+
+.h2 {
+  font-size: 2rem !important;
+}
+
+nav {
+  margin-top: 15px;
 }
 
 #logo {
   max-height: 40px;
 }
 
-.row {
-  width: 100%;
+.text-center {
+  text-align: center;
 }
 
-#banner { 
+#banner {
 	background: inherit;
 	height: 370px;
   margin-bottom: 0;
@@ -27,17 +41,22 @@
   height: 100%;
 }
 
-#banner .display-1 {
-	font-weight: 500;
-	text-align: left;
+#banner h1 {
 	color: #314151;
+  text-align: left;
+  font-weight: 600;
 }
 
-.display-3 {
-  font-size: 4rem;
+#banner .display-1 {
+  font-size: 7rem;
 }
 
-#banner h3 {
+#banner .display-3 {
+  font-size: 3.5rem;
+}
+
+#banner h1 .sub.header {
+  font-size: 1.5rem;
 	text-align: left;
 	color: #314151;
 }
@@ -52,10 +71,34 @@ body {
 }
 
 .coolFont {
-  font-family: 'Graphik-Regular', Arial, Helvetica, sans-serif;
+  font-family: 'Graphik-Regular', Arial, Helvetica, sans-serif !important;
 }
 .bold {
-  font-family: 'Graphik-Medium', Arial, Helvetica, sans-serif;
+  font-family: 'Graphik-Medium', Arial, Helvetica, sans-serif !important;
+}
+
+.ui.header {
+  font-family: 'Graphik-Medium', Arial, Helvetica, sans-serif !important;
+}
+
+.topbox .data {
+  font-size: 1.5rem;
+}
+
+.topbox .title {
+
+}
+.topbox i {
+  font-size: 2rem;
+  line-height: 40px;
+}
+
+.ui.card .content.with-table {
+  padding: 0;
+}
+
+.ui.table {
+  border: none !important;
 }
 
 #redBox, #greenBox, #grayBox {
@@ -88,26 +131,26 @@ body {
   margin: 0;
 }
 .redBox {
-  background-color: #F67F6A;
-  border: 1px solid #F45d08;
+  background-color: #A63446;
+  border: 1px solid #922737;
 }
 
 .greenBox {
-  background-color: #87cbcc;
-  border: 1px solid #61a6a7;
+  background-color: #177e89;
+  border: 1px solid #116c75;
 }
 
 .grayBox {
-	background-color: #B4ACAA;
-  border: 1px solid #928a88;
+	background-color: #6c757d;
+  border: 1px solid #5a6269;
 }
 
 .border-right {
 	border-right: 1px solid white;
 }
 
-.topBox {
-	height: 140px
+.ui.table td {
+  font-size: 0.7rem;
 }
 
 #mb-top, #mb-bottom {
@@ -149,34 +192,25 @@ body {
 	margin-bottom: 50px !important;
 	width: 800px;
   margin: 0 auto;
+  position: relative;
 }
 
 #mb-inner-container {
-	width: 600px;
-	height: 350px;
-	overflow-y: scroll;
-	float: left;
-	position: absolute;
-	left: 116px;
-	bottom: 56px;
-	margin-top: 15px;
-	padding-right: 5px;
+	width: 605px;
+  height: 357px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  float: left;
+  position: absolute;
+  left: 98px;
+  bottom: 59px;
+  margin-top: 15px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .widget-img {
 	width: 100%;
-}
-
-.row {
-	margin-bottom: 15px;
-}
-
-.mb-box {
-	position: absolute;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    margin: 0;
 }
 
 .card-sm {
@@ -187,10 +221,10 @@ body {
 
 .card {
 	position: absolute;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    margin: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  margin: 0;
 }
 
 .jumbotron {
@@ -212,21 +246,21 @@ body {
 .macScroll::-webkit-scrollbar {
     width: 5px;
 }
- 
+
 .macScroll::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
     -webkit-border-radius: 2px;
     border-radius: 2px;
 }
- 
+
 .macScroll::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: rgba(0,0,0,0.5); 
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
+    background: rgba(0,0,0,0.5);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
 }
 .macScroll::-webkit-scrollbar-thumb:window-inactive {
-	background: #000; 
+	background: #000;
 }
 
 #icon-rows {
@@ -234,7 +268,7 @@ body {
   margin-bottom: 50px;
 }
 
-#icon-rows .col .icon {
+#icon-rows .column.with-icon .fal {
   color: white;
   font-size: 45px;
   text-align: center;
@@ -278,14 +312,17 @@ body {
   font-size: 23px;
 }
 
-.btn-outline-secondary:hover {
+.ui.button.btn-outline-secondary:hover {
   background-color: #3c4f63;
   border-color: #fff;
 }
 
-.btn-outline-secondary {
+.ui.button.btn-outline-secondary {
   color: #fff;
   text-transform: uppercase;
+  background-color: transparent;
+  border-radius: 0;
+  border: 1px solid;
 }
 
 th {
@@ -333,9 +370,8 @@ th {
   margin-right: 10px;
 }
 
-.phone {
-  /*margin-right: 50px;*/
-  text-align: right;
+.phone, .mail {
+  text-align: center;
 }
 
 .white {
@@ -347,7 +383,7 @@ th {
   color: #3a3a3a !important;
 }
 
-.row img {
+.column img {
   width: 100%;
 }
 
@@ -361,4 +397,61 @@ footer a {
 footer a:hover {
   text-decoration: none;
   text-decoration: underline;
+}
+
+@media (max-width: 991px) {
+  .hidden-md-down {
+    display: none !important;
+  }
+
+  #banner {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+}
+
+@media (min-width: 992px) {
+  .hidden-lg-up {
+    display: none !important;
+  }
+
+  .phone {
+    text-align: right;
+  }
+
+  .mail {
+    text-align: left;
+  }
+}
+
+#quickDatePop.dropdown {
+    margin-top: 24px;
+    margin-left: 7px;
+}
+
+.top-row * {
+  color: #fff;
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+.ui.card {
+  width: 100%;
+  border-radius: 2px;
+}
+
+.ui.card .content {
+  padding: 7px;
+}
+
+.ui.card .content .header {
+  font-size: 1rem !important;
+  line-height: 1 !important;
+}
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid rgba(0,0,0,.1);
 }
